# ARIEL-SRT

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/ariel_srt/: Alignment.py  Landmark.py  Transfer.py
