[project]
name = "ariel-srt"
version = "0.1.2"
description = ""
authors = [
    {name = "Yang Wanshuo", email = "yangwanshuo@example.com"},
    {name = "Yin Jun", email = "yinjun@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.0",
    "torch>=2.3.1",
    "gpytorch>=1.11.0",
    "scikit-learn>=1.3.0",
    "thinplate>=1.0.0"
]

[tool.poetry]
packages = [{include = "ariel_srt", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"